# pymangadex

./: .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: launch_tests.yml
pymanga/: __main__.py  client.py  exception.py
pymanga/models/: __init__.py  chapter.py  common.py  download_chapter_info.py  manga.py
tests/samples/: chapter.json  chapter_results.json  chapter_second_results.json  download_chapter_info.json  manga.json  manga_results.json  manga_second_results.json  tag_results.json
tests/unit/: test_client.py  test_commands.py  test_manga_models.py  test_models.py
